--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .container {
   /* transform: translate(-50%, -50%); */
   width: 500px;
@@ -8,11 +7,14 @@
   border: 2px solid black;
 }
 
-h1{
+h1 {
   text-align: center;
   font-size: larger;
 }
-p{
+p {
   font-size: medium;
   margin: 5px 0;
+}
+
+* {
 }
